docker/2_kubernetes/ops-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ops
spec:
  selector:
    matchLabels:
      app: hello-ops
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-ops
    spec:
      containers:
        - name: hello-ops
          image: hello:1.0
          ports:
            - containerPort: 8080
