docker/2_kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - host: dev.hello.info
      http:
        paths:
          - backend:
              serviceName: hello-dev
              servicePort: 8080
    - host: ops.hello.info
      http:
        paths:
          - backend:
              serviceName: hello-ops
              servicePort: 8080
